React Router v4 changes

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: center;color: red;
 }
 
-.centerAlign{text-align: center;vertical-align: middle;}
+.centerAlign{text-align: center;vertical-align: middle; color: greenyellow;}
